chore: delete unused files
