# swagger.json
@@ -861,573 +861,6 @@
           }
         }
       }
-    },
-    "/api/v1/order": {
-      "get": {
-        "security": [
-          {
-            "accessToken": []
-          },
-          {
-            "refreshTokenAuth": []
-          }
-        ],
-        "summary": "Get all orders",
-        "description": "Retrieves a list of all orders in the system",
-        "tags": ["Orders"],
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "code": {
-                      "type": "integer",
-                      "example": 200
-                    },
-                    "data": {
-                      "type": "array",
-                      "items": {
-                        "$ref": "#/components/schemas/Order"
-                      }
-                    },
-                    "meta": {
-                      "type": "object",
-                      "properties": {
-                        "count": {
-                          "type": "integer",
-                          "description": "Total number of orders returned"
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "$ref": "#/components/responses/InternalServerError"
-          }
-        }
-      },
-      "post": {
-        "summary": "Create a new order",
-        "security": [
-          {
-            "accessToken": []
-          },
-          {
-            "refreshTokenAuth": []
-          }
-        ],
-        "tags": ["Orders"],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/CreateOrderInput"
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "Order created successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "code": {
-                      "type": "integer",
-                      "example": 201
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Order created successfully"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "$ref": "#/components/responses/ValidationError"
-          },
-          "403": {
-            "$ref": "#/components/responses/Unauthorized"
-          },
-          "500": {
-            "$ref": "#/components/responses/InternalServerError"
-          }
-        }
-      }
-    },
-    "/api/v1/order/{id}": {
-      "get": {
-        "summary": "Get an order by ID",
-        "description": "Retrieves a specific order based on the provided ID",
-        "tags": ["Orders"],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "description": "The ID of the order to retrieve",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "code": {
-                      "type": "integer",
-                      "example": 200
-                    },
-                    "data": {
-                      "$ref": "#/components/schemas/Order"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Order not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      },
-      "put": {
-        "summary": "Update and order by id",
-        "security": [
-          {
-            "accessToken": []
-          },
-          {
-            "refreshTokenAuth": []
-          }
-        ],
-        "description": "Deletes an order by its ID",
-        "tags": ["Orders"],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "schema": {
-              "type": "string"
-            },
-            "description": "The ID of the order to update"
-          },
-          {
-            "in": "cookie",
-            "name": "id",
-            "required": true,
-            "schema": {
-              "type": "string"
-            },
-            "description": "Access token for authentication"
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UpdateOrderInputDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "204": {
-            "description": "Order updated successfully"
-          },
-          "400": {
-            "description": "Bad request (invalid input)"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Order not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      },
-      "delete": {
-        "summary": "Delete an order",
-        "security": [
-          {
-            "accessToken": []
-          },
-          {
-            "refreshTokenAuth": []
-          }
-        ],
-        "description": "Deletes an order by its ID",
-        "tags": ["Orders"],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "description": "ID of the order to delete",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "Order successfully deleted"
-          },
-          "400": {
-            "description": "Bad request - Invalid ID format"
-          },
-          "404": {
-            "description": "Order not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      }
-    },
-    "/api/v1/order/shop-page/{name}/{index}": {
-      "get": {
-        "security": [
-          {
-            "accessToken": []
-          },
-          {
-            "refreshTokenAuth": []
-          }
-        ],
-        "description": "Retrieves a paginated list of orders for a specific shop",
-        "tags": ["Pagination Order"],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "name",
-            "required": true,
-            "schema": {
-              "type": "string"
-            },
-            "description": "The name of the shop"
-          },
-          {
-            "in": "path",
-            "name": "index",
-            "required": true,
-            "schema": {
-              "type": "string"
-            },
-            "description": "The page index for pagination"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "code": {
-                      "type": "number",
-                      "example": 200
-                    },
-                    "data": {
-                      "$ref": "#/components/schemas/DataPagination"
-                    },
-                    "meta": {
-                      "$ref": "#/components/schemas/MetaPagination"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "code": {
-                      "type": "integer",
-                      "example": 400
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Bad Request"
-                    },
-                    "errors": {
-                      "type": "string",
-                      "example": "Index params must be a contain"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "$ref": "#/components/responses/InternalServerError"
-          }
-        }
-      }
-    },
-    "/api/v1/order/page/{index}": {
-      "get": {
-        "summary": "Get paginated orders",
-        "security": [
-          {
-            "accessToken": []
-          },
-          {
-            "refreshTokenAuth": []
-          }
-        ],
-        "description": "Retrieves a page of orders based on the provided index",
-        "tags": ["Pagination Order"],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "index",
-            "required": true,
-            "schema": {
-              "type": "string"
-            },
-            "description": "The page index for pagination"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "code": {
-                      "type": "number",
-                      "example": 200
-                    },
-                    "data": {
-                      "$ref": "#/components/schemas/DataPagination"
-                    },
-                    "meta": {
-                      "$ref": "#/components/schemas/MetaPagination"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "code": {
-                      "type": "integer",
-                      "example": 400
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Bad Request"
-                    },
-                    "errors": {
-                      "type": "string",
-                      "example": "Index params must be a contain numeric characte"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "$ref": "#/components/responses/InternalServerError"
-          }
-        }
-      }
-    },
-    "/shop": {
-      "get": {
-        "summary": "Get shop information",
-        "description": "Retrieves shop information based on the provided limit",
-        "security": [
-          {
-            "accessToken": []
-          },
-          {
-            "refreshTokenAuth": []
-          }
-        ],
-        "tags": ["Shop"],
-        "parameters": [
-          {
-            "in": "query",
-            "name": "limit",
-            "schema": {
-              "type": "integer"
-            },
-            "description": "The maximum number of shop items to return",
-            "required": false
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "code": {
-                      "type": "integer",
-                      "example": 200
-                    },
-                    "data": {
-                      "type": "array",
-                      "items": {
-                        "$ref": "#/components/schemas/Shop"
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "$ref": "#/components/responses/BadRequest"
-          },
-          "500": {
-            "$ref": "#/components/responses/InternalServerError"
-          }
-        }
-      },
-      "post": {
-        "summary": "Create a new shop",
-        "description": "Creates a new shop for the authenticated user",
-        "tags": ["Shop"],
-        "security": [
-          {
-            "accessToken": []
-          },
-          {
-            "refreshTokenAuth": []
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/CreateShopInput"
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "Shop created successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "code": {
-                      "type": "integer",
-                      "example": 201
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Shop created successfully"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request (validation error)"
-          },
-          "401": {
-            "description": "Unauthorized (invalid or missing token)"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      },
-      "paths": null
-    },
-    "/user/profile/{id}": {
-      "get": {
-        "summary": "Get user profile",
-        "description": "Retrieves the profile information for a specific user.",
-        "tags": ["User"],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "schema": {
-              "type": "string"
-            },
-            "description": "The ID of the user whose profile is being requested."
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/UserProfile"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request"
-          },
-          "404": {
-            "description": "User not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        },
-        "security": [
-          {
-            "accessToken": []
-          },
-          {
-            "refreshTokenAuth": []
-          }
-        ]
-      }
     }
   }
 }
